Fixed overflow for preview

--- a/src/styles/preview.css
+++ b/src/styles/preview.css
@@ -7,8 +7,8 @@
     background-color: white;
     border: none;
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-    min-width: 21cm;
-    min-height: 29.7cm;
+    width: 21cm;
+    height: 29.7cm;
     page-break-before: auto;
 }
 
